Feat: Generate id for grade, Refactor find teacher